update styling to match ui kit, create lead form, still a wip though

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,8 +5,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  color: #fff;
-  background: #000;
+  background: #f8f8f8;
 }
 
 .main svg {
