--- a/app/globals.css
+++ b/app/globals.css
@@ -10,12 +10,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* background: #f8f8f8; */
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: #f8f8f8;
 }
 
 a {
